<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="claimRequest"
            type="com.application.claimsample.data.ClaimRequest" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_ten"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvLableClaimType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/claim_type"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvClaimType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{claimRequest.claimType.name}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@id/tvLableClaimType"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLableClaimDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/claim_date_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLableClaimType" />

            <TextView
                android:id="@+id/tvClaimDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@{claimRequest.claimDate}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@id/tvLableClaimDate"
                app:layout_constraintTop_toBottomOf="@id/tvClaimType" />

            <TextView
                android:id="@+id/tvLableExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/expense_amount"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLableClaimDate" />

            <TextView
                android:id="@+id/tvExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@{claimRequest.expense}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@id/tvLableExpense"
                app:layout_constraintTop_toBottomOf="@id/tvClaimDate" />

            <TextView
                android:id="@+id/tvViewMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_ten"
                android:text="@string/view_more"
                android:textColor="@color/teal_200"
                app:drawableRightCompat="@drawable/ic_arrow_dwon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>